Initiate skeleton & user

--- a/.env-sample
+++ b/.env-sample
@@ -15,18 +15,17 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=dd8eb01f4d1845cb58777bc7fda0d41b
+APP_SECRET=avuxR4fsHRM52XS8rV7CJVg7B0fmbHT1GiQ3qZHhXsK9RC294M
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
 
 ###> doctrine/mongodb-odm-bundle ###
-#MONGODB_URL=mongodb://hero:7gsRiHVlWuEd@localhost:27017
 MONGODB_URL=mongodb://localhost:27017
-MONGODB_DB=meets
+MONGODB_DB=db)name
 ###< doctrine/mongodb-odm-bundle ###
 
 ###> JWT ###
-JWT_ISSUER=meets
-JWT_PERMITTED_FOR=meets
-JWT_EXPIRATION=3600 # 1 hour
+JWT_ISSUER=issuer
+JWT_PERMITTED_FOR=permitted-for
+JWT_EXPIRATION=1
