--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,31 @@
 {
     "type": "project",
     "license": "proprietary",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/mongodb-odm-bundle": "^4.1",
+        "friendsofsymfony/rest-bundle": "dev-master",
+        "gedmo/doctrine-extensions": "^2.4",
+        "lcobucci/jwt": "^3.3",
+        "predis/predis": "^1.1",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
-        "symfony/yaml": "5.0.*"
+        "symfony/monolog-bundle": "^3.5",
+        "symfony/security-bundle": "5.0.*",
+        "symfony/serializer-pack": "^1.0",
+        "symfony/validator": "5.0.*",
+        "symfony/yaml": "5.0.*",
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.14",
+        "symfony/var-dumper": "5.0.*"
     },
     "config": {
         "preferred-install": {
@@ -55,7 +69,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": "true",
             "require": "5.0.*"
         }
     }
